@@ -3,13 +3,20 @@ package fungorium;
 import java.awt.*;
 import java.util.ArrayList;
 
+/**
+ *  This class is responsible for storing the coordinates of the FungusBody
+ *  and for attaching-detaching its observers and updating.
+ */
 public class GFungusBody implements IObservable {
-    FungusBody fungusbody;
-    int x;
-    int y;
-    ArrayList<IObserver> observers;
+    private FungusBody fungusbody;
+    private int x;
+    private int y;
+    private ArrayList<IObserver> observers;
 
-
+    /**
+     * Constructor.
+     * @param fb The FungusBody of the graphical FungusBody.
+     */
     public GFungusBody(FungusBody fb) {
         fungusbody = fb;
         x = -1;
@@ -17,12 +24,23 @@ public class GFungusBody implements IObservable {
         observers = new ArrayList<>();
     }
 
+    /**
+     * Attachment of observers.
+     * @param o the observer to be attached.
+     */
     @Override
     public void attach(IObserver o) { observers.add(o);}
 
+    /**
+     * Detachment of observers.
+     * @param the observer to be detached.
+     */
     @Override
     public void detach(IObserver o) { observers.remove(o); }
 
+    /**
+     * Update which calls every observer's draw method, giving the FungusBody coordinates in parameter.
+     */
     @Override
     public void update(Graphics g) {
         for(IObserver o : observers) {
@@ -30,13 +48,25 @@ public class GFungusBody implements IObservable {
         }
     }
 
+    /**
+     * Returns the first observer from the observers list.
+     */
     @Override
-    public IObserver getObserver() { return observers.getFirst(); }
+    public IObserver getObserver() { return observers.get(0); }
 
+    /**
+     * Sets the coordinates of the FungusBody on the game window.
+     * @param x amount of pixel steps on the x axis
+     * @param y amount of pixel steps on the y axis
+     */
     public void setCoordinates(int x, int y) {
         this.x = x;
         this.y = y;
     }
 
+    /**
+     * Returns the FungusBody.
+     * @return the FungusBody
+     */
     public FungusBody getFungusbody() { return fungusbody; }
 }
